Added logical operations