@@ -1,37 +1,38 @@
-package operations.impl;
+package operations.impl.logical;
 
 import entities.coordinates.Coordinates;
 import entities.sheet.CoreSheet;
+import entities.types.undefined.UndefinedBoolean;
 import entities.types.undefined.UndefinedNumber;
 import operations.core.ObjectWrapper;
 import operations.core.Operation;
 
 import java.util.List;
 
-public class MINUSOperation extends Operation {
-    public MINUSOperation(CoreSheet sheet, Coordinates coordinates, List<Object> arguments) {
+public class NOTOperation extends Operation {
+
+    public NOTOperation(CoreSheet sheet, Coordinates coordinates, List<Object> arguments) {
         super.sheet = sheet;
         this.coordinates = coordinates;
-        super.name = "MINUS";
+        super.name = "NOT";
         super.arguments = arguments;
     }
-
 
     @Override
     public ObjectWrapper execute() {
         Object resultObj;
         List<ObjectWrapper> effectiveValues = convertToNonOperationObjects();
         boolean isRefNested = isOneOfTheArgumentsAReference(effectiveValues);
-        Class<?>[] expectedClazzes ={Number.class, Number.class};
+        Class<?>[] expectedClazzes ={Boolean.class};
         if (areArgumentsTypesValid(expectedClazzes,effectiveValues)) {
-            List<Double> doubles = convertToDouble(effectiveValues);
-
-            resultObj = doubles.get(0)-doubles.get(1);
+            Boolean arg = (Boolean) effectiveValues.getFirst().getObj();
+            resultObj = (Boolean) !arg;
         }
         else {
-            resultObj = new UndefinedNumber();
+            resultObj = new UndefinedBoolean();
         }
 
-        return new ObjectWrapper(resultObj, isRefNested);
+        return new ObjectWrapper(resultObj,isRefNested);
     }
 }
+
